{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 59,
  "lineage": "3c8823e1-b7e9-03a8-d6d1-d0e543d62fb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "acit_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:internet-gateway/igw-02266262f026a8ccb",
            "id": "igw-02266262f026a8ccb",
            "owner_id": "480215848864",
            "tags": {
              "Name": "acit-4640-igw"
            },
            "tags_all": {
              "Name": "acit-4640-igw"
            },
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "acit_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:route-table/rtb-000ea01cebfcca060",
            "id": "rtb-000ea01cebfcca060",
            "owner_id": "480215848864",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02266262f026a8ccb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acit-4640-rt"
            },
            "tags_all": {
              "Name": "acit-4640-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.acit_igw",
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "acit_rt_assoc_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f16b3d7730a1e671",
            "route_table_id": "rtb-000ea01cebfcca060",
            "subnet_id": "subnet-0c1ce6d48fe4822d4"
          },
          "dependencies": [
            "aws_internet_gateway.acit_igw",
            "aws_route_table.acit_rt",
            "aws_subnet.acit_pub_subnet",
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "acit_rt_assoc_rds1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a24de16ac9a70d0",
            "route_table_id": "rtb-000ea01cebfcca060",
            "subnet_id": "subnet-04e6b1825f07b5b0b"
          },
          "dependencies": [
            "aws_internet_gateway.acit_igw",
            "aws_route_table.acit_rt",
            "aws_subnet.acit_rds_subnet1",
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "acit_rt_assoc_rds2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08be706746bca1aef",
            "route_table_id": "rtb-000ea01cebfcca060",
            "subnet_id": "subnet-0549decf2c68fb1b8"
          },
          "dependencies": [
            "aws_internet_gateway.acit_igw",
            "aws_route_table.acit_rt",
            "aws_subnet.acit_rds_subnet2",
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acit_sg_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:security-group/sg-0f37e295d63639414",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f37e295d63639414",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acit-4640-sg-ec220230316233356973000000001",
            "name_prefix": "acit-4640-sg-ec2",
            "owner_id": "480215848864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acit-4640-sg-ec2"
            },
            "tags_all": {
              "Name": "acit-4640-sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acit_sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:security-group/sg-03516472c9a18e4d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03516472c9a18e4d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "acit-4640-sg-rds20230316233356973300000002",
            "name_prefix": "acit-4640-sg-rds",
            "owner_id": "480215848864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acit-4640-sg-rds"
            },
            "tags_all": {
              "Name": "acit-4640-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acit_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:subnet/subnet-0c1ce6d48fe4822d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1ce6d48fe4822d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "480215848864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acit-4640-pub-sub"
            },
            "tags_all": {
              "Name": "acit-4640-pub-sub"
            },
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acit_rds_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:subnet/subnet-04e6b1825f07b5b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e6b1825f07b5b0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "480215848864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acit-4640-rds-sub1"
            },
            "tags_all": {
              "Name": "acit-4640-rds-sub1"
            },
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acit_rds_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:subnet/subnet-0549decf2c68fb1b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0549decf2c68fb1b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "480215848864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acit-4640-rds-sub2"
            },
            "tags_all": {
              "Name": "acit-4640-rds-sub2"
            },
            "vpc_id": "vpc-0f610de92f6b0ee65"
          },
          "dependencies": [
            "aws_vpc.acit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "acit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:480215848864:vpc/vpc-0f610de92f6b0ee65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7602cbf934578ba",
            "default_route_table_id": "rtb-022114d7ce3bdeab1",
            "default_security_group_id": "sg-09b0b03437de24220",
            "dhcp_options_id": "dopt-0cb1e89caf5842d06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f610de92f6b0ee65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022114d7ce3bdeab1",
            "owner_id": "480215848864",
            "tags": {
              "Name": "acit-4640-vpc"
            },
            "tags_all": {
              "Name": "acit-4640-vpc"
            }
          }
        }
      ]
    }
  ]
}